--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abdur Rob</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" type="image/x-icon" href="img/favicon/dec.png">
 </head>
 <body>
   <h1>Lorem ipsum dolor sit amet</h1>
