created the header section not completed just did the structure and css

--- a/index.html
+++ b/index.html
@@ -7,12 +7,34 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="icon" type="image/x-icon" href="img/favicon/dec.png">
 </head>
+
 <body>
-  <h1>Lorem ipsum dolor sit amet</h1>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis dolor ad odio necessitatibus enim soluta magnam debitis vitae, veritatis alias.
-  </p>
-  <a href="#">cdas</a>
+  <!-- Header Start -->
+  <header>
+    <div class="container">
+      <div class="flex-wrapper">
+        <div class="logo">
+          <img src="img/favicon/dec.png" alt="It is abdurrobr34l  personal portfolio website logo">
+        </div>
+        <!-- Menus -->
+         <nav>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+         </nav>
+        <div class="header-btn btn">
+          <a href="#">Hire Me</a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!-- Header End -->
+
+
   <script src="js/script.js"></script>
 </body>
 </html>
