Just minor changes done...

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </div>
   </header>
   <!-- Header End -->
-
+<div class="box box-1"></div>
+<div class="box box-2"></div>
+<div class="box box-3"></div>
 
   <script src="js/script.js"></script>
 </body>
