completed header and hamburger menu responsive and started hero section, hero section structure design is done just content placement and adjustment and also content left to be given.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         </div>
         <!-- Hamburger Menu Icon -->
          <div class="header__hamburgermenu-icon">
-          <i class="fa-solid fa-bars"></i>
+          <!-- <i class="fa-solid fa-bars"></i> -->
+          <i class="fa-solid fa-bars-staggered"></i>
+          <i class="fa-solid fa-xmark"></i>
          </div>
       </div>
     </div>
@@ -59,7 +61,7 @@
      </nav>
      <!-- Header Button -->
     <div class="hamburgermenu__btn header__btn">
-      <a href="#" class="btn">Hire Me</a>
+      <a href="#contact" class="btn">Hire Me</a>
     </div>
     </div>
    </div>
@@ -67,14 +69,23 @@
   <!-- Header End -->
 
   <!-- Hero Start -->
-   <!-- <section class="hero">
-    <div class="container">
-      <div class="flex-wrapper">
-        <h1>lol</h1>
-        <h2>bol</h2>
+   <section class="hero">
+    <div class="hero__container container">
+      <div class="hero__wrapper flex-wrapper">
+        <div class="hero__content">f</div>
+       <div class="hero__image flex">
+        <img src="img/hero/abdur rob.png" alt="" style="width: 400px;">
+        <div class="social flex">
+          <a href="https://github.com/Abdurrobr34l" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/abdurrobr34l" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://x.com/Abdurrob_r34l" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.youtube.com/@abdurrobr34l" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+       </div>
       </div>
     </div>
-   </section> -->
+   </section>
   <!-- Hero End -->
 
   <script src="js/script.js"></script>
