trying different layout for hero section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,9 @@
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="img/favicon/fav.png">
   <!-- Font-Awsome CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -25,69 +28,99 @@
           <!-- <a href="index.html"><img src="img/logo/22.png" alt="it is abdurrobr34l website logo"></a> -->
         </div>
         <!-- Menus -->
-         <nav class="header__nav">
+        <nav class="header__nav">
           <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-         </nav>
-         <!-- Header Button -->
+        </nav>
+        <!-- Header Button -->
         <div class="header__btn">
           <a href="#" class="btn">Hire Me</a>
         </div>
         <!-- Hamburger Menu Icon -->
-         <div class="header__hamburgermenu-icon">
+        <div class="header__hamburgermenu-icon">
           <!-- <i class="fa-solid fa-bars"></i> -->
           <i class="fa-solid fa-bars-staggered"></i>
           <i class="fa-solid fa-xmark"></i>
-         </div>
+        </div>
       </div>
     </div>
   </header>
 
   <!-- Hamburger Menu Start -->
-   <div class="hamburgermenu">
+  <div class="hamburgermenu">
     <div class="hamburgermenu__container container flex">
       <!-- Menus -->
-    <nav class="hamburgermenu__nav flex">
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-     </nav>
-     <!-- Header Button -->
-    <div class="hamburgermenu__btn header__btn">
-      <a href="#contact" class="btn">Hire Me</a>
+      <nav class="hamburgermenu__nav flex">
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- Header Button -->
+      <div class="hamburgermenu__btn header__btn">
+        <a href="#contact" class="btn">Hire Me</a>
+      </div>
     </div>
-    </div>
-   </div>
+  </div>
   <!-- Hamburger Menu End -->
   <!-- Header End -->
 
   <!-- Hero Start -->
-   <section class="hero">
+  <section class="hero">
     <div class="hero__container container">
       <div class="hero__wrapper flex-wrapper">
         <div class="hero__content">f</div>
-       <div class="hero__image flex">
-        <img src="img/hero/abdur rob.png" alt="" style="width: 400px;">
-        <div class="social flex">
-          <a href="https://github.com/Abdurrobr34l" target="_blank"><i class="fa-brands fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://www.facebook.com/abdurrobr34l" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-          <a href="https://x.com/Abdurrob_r34l" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-          <a href="https://www.youtube.com/@abdurrobr34l" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+        <div class="hero__image flex">
+          <img src="img/hero/abdur rob.png" alt="" style="width: 400px;">
+          <div class="social flex">
+            <a href="https://github.com/Abdurrobr34l" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank"><i
+                class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/abdurrobr34l" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://x.com/Abdurrob_r34l" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.youtube.com/@abdurrobr34l" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+          </div>
         </div>
-       </div>
       </div>
     </div>
-   </section>
+  </section>
   <!-- Hero End -->
+
+  <div class="hero">
+    <div class="hero__container container">
+      <div class="hero__wrapper grid">
+        <div class="box box1">
+          <div class="hero__content">
+            <h1>Abdur Rob</h1>
+            <h2>Frontend & WordPress Developer</h2>
+            <p>"Let’s create something amazing together—whether it’s a custom-coded site or a WordPress solution."</p>
+            <a href="#" class="btn">Learn More</a>
+          </div>
+        </div>
+        <div class="box box2">
+          <img src="img/hero/abdurrob.png" alt="">
+        </div>
+        <div class="box box3">
+          <div class="social flex">
+            <a href="https://github.com/Abdurrobr34l" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank"><i
+                class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/abdurrobr34l" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://x.com/Abdurrob_r34l" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.youtube.com/@abdurrobr34l" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="js/script.js"></script>
 </body>
+
 </html>
