--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <!-- Header End -->
 
   <!-- Hero Start -->
-  <section class="hero">
+  <!-- <section class="hero">
     <div class="hero__container container">
       <div class="hero__wrapper flex-wrapper">
         <div class="hero__content">f</div>
@@ -89,24 +89,22 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Hero End -->
 
   <div class="hero">
     <div class="hero__container container">
       <div class="hero__wrapper grid">
-        <div class="box box1">
-          <div class="hero__content">
-            <h1>Abdur Rob</h1>
-            <h2>Frontend & WordPress Developer</h2>
-            <p>"Let’s create something amazing together—whether it’s a custom-coded site or a WordPress solution."</p>
-            <a href="#" class="btn">Learn More</a>
-          </div>
+
+        <div class="hero__content box">
+            <h1>ABDUR ROB</h1>
+            <p>Transforming visions into seamless, responsive websites that engage and inspire. With expertise in <span>Frontend</span> & <span>WordPress development</span>, I build custom solutions that bring your ideas to life</p>
+            <a href="#about" class="btn">Learn More</a>
         </div>
-        <div class="box box2">
+        <div class="hero__image box">
           <img src="img/hero/abdurrob.png" alt="">
         </div>
-        <div class="box box3">
+        <div class="hero__social box">
           <div class="social flex">
             <a href="https://github.com/Abdurrobr34l" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank"><i
@@ -116,6 +114,7 @@
             <a href="https://www.youtube.com/@abdurrobr34l" target="_blank"><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
+
       </div>
     </div>
   </div>
