hero section completed

--- a/index.html
+++ b/index.html
@@ -72,34 +72,16 @@
   <!-- Header End -->
 
   <!-- Hero Start -->
-  <!-- <section class="hero">
-    <div class="hero__container container">
-      <div class="hero__wrapper flex-wrapper">
-        <div class="hero__content">f</div>
-        <div class="hero__image flex">
-          <img src="img/hero/abdur rob.png" alt="" style="width: 400px;">
-          <div class="social flex">
-            <a href="https://github.com/Abdurrobr34l" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank"><i
-                class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/abdurrobr34l" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://x.com/Abdurrob_r34l" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.youtube.com/@abdurrobr34l" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- Hero End -->
-
   <div class="hero">
     <div class="hero__container container">
       <div class="hero__wrapper grid">
 
         <div class="hero__content box">
-            <h1>ABDUR ROB</h1>
-            <p>Transforming visions into seamless, responsive websites that engage and inspire. With expertise in <span>Frontend</span> & <span>WordPress development</span>, I build custom solutions that bring your ideas to life</p>
-            <a href="#about" class="btn">Learn More</a>
+          <h1>ABDUR ROB</h1>
+          <p>Transforming visions into seamless, responsive websites that engage and inspire. With expertise in
+            <span>Frontend</span> & <span>WordPress development</span>, I build custom solutions that bring your ideas
+            to life</p>
+          <a href="#about" class="btn">Learn More</a>
         </div>
         <div class="hero__image box">
           <img src="img/hero/abdurrob.png" alt="">
@@ -118,6 +100,9 @@
       </div>
     </div>
   </div>
+  <!-- Hero End -->
+
+  <h1>lorem</h1>
 
   <script src="js/script.js"></script>
 </body>
