--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <!-- Header Start -->
   <header class="header">
-    <div class="container__header container">
-      <div class="flex-wrapper">
+    <div class="header__container container">
+      <div class="header__wrapper flex-wrapper">
         <!-- Logo -->
         <div class="header__logo">
           <a href="index.html"><img src="img/logo/11.png" alt="it is abdurrobr34l website logo"></a>
@@ -38,7 +38,7 @@
         </nav>
         <!-- Header Button -->
         <div class="header__btn">
-          <a href="#" class="btn">Hire Me</a>
+          <a href="#contact" class="btn">Hire Me</a>
         </div>
         <!-- Hamburger Menu Icon -->
         <div class="header__hamburgermenu-icon">
@@ -72,7 +72,7 @@
   <!-- Header End -->
 
   <!-- Hero Start -->
-  <div class="hero">
+  <div class="hero section-padding">
     <div class="hero__container container">
       <div class="hero__wrapper grid">
 
@@ -82,18 +82,23 @@
             <span>Frontend</span> & <span>WordPress development</span>, I build custom solutions that bring your ideas
             to life</p>
           <a href="#about" class="btn">Learn More</a>
+          <a href="cv/cv.pdf" target="_blank" class="btn">Download CV</a>
         </div>
         <div class="hero__image box">
           <img src="img/hero/abdurrob.png" alt="">
         </div>
         <div class="hero__social box">
           <div class="social flex">
-            <a href="https://github.com/Abdurrobr34l" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank"><i
+            <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i class="fa-brands fa-github"></i></a>
+
+            <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i
                 class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/abdurrobr34l" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://x.com/Abdurrob_r34l" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.youtube.com/@abdurrobr34l" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+
+            <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i class="fa-brands fa-facebook"></i></a>
+            
+            <a href="https://x.com/Abdurrob_r34l" target="_blank" aria-label="it is twitter logo"><i class="fa-brands fa-twitter"></i></a>
+            
+            <a href="https://www.youtube.com/@abdurrobr34l" target="_blank" aria-label="it is youtube logo"><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
 
@@ -102,7 +107,8 @@
   </div>
   <!-- Hero End -->
 
-  <h1>lorem</h1>
+  <!-- ABOUT ME START -->
+  <!-- ABOUT ME END -->
 
   <script src="js/script.js"></script>
 </body>
