completed my hearo section, now i will work on my about me section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
   <!-- Hero End -->
 
   <!-- ABOUT ME START -->
+   <h1>ABOUT ME</h1>
   <!-- ABOUT ME END -->
 
   <script src="js/script.js"></script>
