--- a/index.html
+++ b/index.html
@@ -80,25 +80,30 @@
           <h1>ABDUR ROB</h1>
           <p>Transforming visions into seamless, responsive websites that engage and inspire. With expertise in
             <span>Frontend</span> & <span>WordPress development</span>, I build custom solutions that bring your ideas
-            to life</p>
+            to life
+          </p>
           <a href="#about" class="btn">Learn More</a>
           <a href="cv/cv.pdf" target="_blank" class="btn">Download CV</a>
         </div>
         <div class="hero__image box">
-          <img src="img/hero/abdurrob.png" alt="">
+          <img src="img/hero/abdurrob.png" alt="it is the image of the author of this website, named abdurrobr34l">
         </div>
         <div class="hero__social box">
           <div class="social flex">
-            <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i
+                class="fa-brands fa-github"></i></a>
 
             <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i
                 class="fa-brands fa-linkedin"></i></a>
 
-            <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i class="fa-brands fa-facebook"></i></a>
-            
-            <a href="https://x.com/Abdurrob_r34l" target="_blank" aria-label="it is twitter logo"><i class="fa-brands fa-twitter"></i></a>
-            
-            <a href="https://www.youtube.com/@abdurrobr34l" target="_blank" aria-label="it is youtube logo"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i
+                class="fa-brands fa-facebook"></i></a>
+
+            <a href="https://x.com/Abdurrob_r34l" target="_blank" aria-label="it is twitter logo"><i
+                class="fa-brands fa-twitter"></i></a>
+
+            <a href="https://www.youtube.com/@abdurrobr34l" target="_blank" aria-label="it is youtube logo"><i
+                class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
 
@@ -108,7 +113,46 @@
   <!-- Hero End -->
 
   <!-- ABOUT ME START -->
-   <h1>ABOUT ME</h1>
+  <div class="about section-padding" id="about">
+    <div class="about__container container">
+      <div class="about__wrapper flex-wrapper">
+
+        <div class="about__image" style="border: 1px solid;">
+          <img src="img/hero/abdurrob.png" alt="it is the image of the author of this website, named abdurrobr34l">
+        </div>
+        <div class="about__content grid" style="border: 1px solid;">
+
+          <div class="about__text">
+            <h2 class="wrap">Hi, I'm Abdur Rob, a</h2>
+            <span class="typewrite" data-period="2000"
+              data-type='["Frontend Developer", "Wordpress Developer", "Freelancer"]'></span>
+            <p>I am passionate about creating user-friendly and visually appealing websites. I specialize in building
+              responsive designs that ensure seamless functionality across all devices. By staying updated on the latest
+              industry trends and best practices, I produce clean, efficient, and understandable code.
+              <br><br>
+              My goal is to blend creativity with functionality to deliver web solutions that enhance user experience. I
+              thrive on challenges, particularly when it comes to problem-solving, and I'm always eager to learn new
+              skills and technologies.
+              <br><br>
+              I look forward to contributing to exciting projects and continuing my growth in this fast-paced field..
+            </p>
+            <a href="#contact" class="about__text-btn btn">Get in touch</a>
+          </div>
+          <div class="about__skill">
+            <i class="fa-brands fa-html5 fa-2xl"></i>
+            <i class="fa-brands fa-css3-alt fa-2xl"></i>
+            <i class="fa-brands fa-sass fa-2xl"></i>
+            <i class="fa-brands fa-square-js fa-2xl"></i>
+            <i class="fa-brands fa-bootstrap fa-2xl"></i>
+            <i class="fa-brands fa-wordpress fa-2xl"></i>
+            <i class="fa-solid fa-envelope fa-2xl"></i>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
   <!-- ABOUT ME END -->
 
   <script src="js/script.js"></script>
