just trying to make the icon big and take full space

--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
             <i class="fa-brands fa-bootstrap fa-2xl"></i>
             <i class="fa-brands fa-wordpress fa-2xl"></i>
             <i class="fa-solid fa-envelope fa-2xl"></i>
+
+            <!-- --- -->
+
+            <ul class="icon">
+              <li><i class="fa-brands fa-html5 fa-2xl"></i></li>
+              <li><i class="fa-brands fa-html5 fa-2xl"></i></li>
+              <li><i class="fa-brands fa-html5 fa-2xl"></i></li>
+              <li><i class="fa-brands fa-html5 fa-2xl"></i></li>
+            </ul>
           </div>
 
         </div>
