go-to-top button added, minor changes done in css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+  <!-- Go-To-Top Button Start -->
+  <a href="#" class="go-to-top" id="goToTop">↑</a>
+  <!-- Go-To-Top Button End -->
 
   <!-- Header Start -->
   <header class="header">
@@ -189,6 +192,14 @@
     </div>
   </div>
   <!-- ABOUT ME END -->
+
+  <!-- PROJECT START -->
+   <div class="project" id="projects">
+    <div class="project__container container">
+      <div class="project__wrapper"></div>
+    </div>
+   </div>
+  <!-- PROJECT END -->
 
   <script src="js/script.js"></script>
 </body>
