working on project filter part

--- a/index.html
+++ b/index.html
@@ -194,11 +194,29 @@
   <!-- ABOUT ME END -->
 
   <!-- PROJECT START -->
-   <div class="project" id="projects">
+  <div class="project section-padding" id="projects">
     <div class="project__container container">
-      <div class="project__wrapper"></div>
+      <!-- Project Filtern -->
+      <div class="project__filter flex">
+        <!-- Filter Buttons -->
+        <div class="project__filter-buttons flex">
+          <button class="filter-btn" data-filter="all">All</button>
+          <button class="filter-btn" data-filter="web">Web Development</button>
+          <button class="filter-btn" data-filter="wordpress">Wordpress</button>
+          <button class="filter-btn" data-filter="email">Email Template</button>
+        </div>
+        <!-- Filter Boxs -->
+         <div class="project__filter-boxs">
+          <div class="filter-box web">web</div>
+          <div class="filter-box email">email</div>
+          <div class="filter-box wordpress">wordpress</div>
+          <div class="filter-box web">web</div>
+          <div class="filter-box web">web</div>
+          <div class="filter-box web">web</div>
+         </div>
+      </div>
     </div>
-   </div>
+  </div>
   <!-- PROJECT END -->
 
   <script src="js/script.js"></script>
