made the project filter, now try to make same filter with more smooth animation for the project page

--- a/index.html
+++ b/index.html
@@ -200,20 +200,23 @@
       <div class="project__filter flex">
         <!-- Filter Buttons -->
         <div class="project__filter-buttons flex">
-          <button class="filter-btn" data-filter="all">All</button>
-          <button class="filter-btn" data-filter="web">Web Development</button>
-          <button class="filter-btn" data-filter="wordpress">Wordpress</button>
-          <button class="filter-btn" data-filter="email">Email Template</button>
+          <button class="project__filter-btn" data-filter="all">All</button>
+          <button class="project__filter-btn" data-filter="web">Web Development</button>
+          <button class="project__filter-btn" data-filter="wordpress">Wordpress</button>
+          <button class="project__filter-btn" data-filter="email">Email Template</button>
         </div>
         <!-- Filter Boxs -->
-         <div class="project__filter-boxs">
-          <div class="filter-box web">web</div>
-          <div class="filter-box email">email</div>
-          <div class="filter-box wordpress">wordpress</div>
-          <div class="filter-box web">web</div>
-          <div class="filter-box web">web</div>
-          <div class="filter-box web">web</div>
-         </div>
+        <div class="project__filter-boxes">
+          <div class="project__filter-box project__filter-box--web">web</div>
+          <div class="project__filter-box project__filter-box--email">email</div>
+          <div class="project__filter-box project__filter-box--wordpress">wordpress</div>
+          <div class="project__filter-box project__filter-box--web">web</div>
+          <div class="project__filter-box project__filter-box--web">web</div>
+          <div class="project__filter-box project__filter-box--web">web</div>
+
+        </div>
+        <!-- Project Buttons -->
+        <a href="project.html" class="project__btn btn">See More</a>
       </div>
     </div>
   </div>
