created project page now left to make the filter work smoothl;y without any lag

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         </div>
         <!-- Project Buttons -->
-        <a href="project.html" class="project__btn btn">See More</a>
+        <a href="project.html" class="project__btn btn" target="_blank">See More</a>
       </div>
     </div>
   </div>
