Finally made my project filter now i need to do the same in index file, added meta tags, added jquerry CDN and half responsive done for filter

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abdur Rob</title>
+  <meta name="description"
+    content="Welcome to Abdur Rob's portfolio. Explore my web development projects, skills, and learn more about my journey as a frontend developer.">
+  <meta name="keywords"
+    content="Abdur Rob, frontend developer, web development, portfolio, JavaScript, CSS, HTML, projects">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Abdur Rob | Frontend Developer & Portfolio">
+  <meta property="og:description" content="Explore my web development projects and skills as a frontend developer.">
+  <meta property="og:image" content="url_to_image.jpg">
+  <meta property="og:url" content="https://yourwebsite.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Abdur Rob | Frontend Developer & Portfolio">
+  <meta name="twitter:description" content="Explore my web development projects and skills as a frontend developer.">
+  <meta name="twitter:image" content="url_to_image.jpg">
+
   <!-- File Links -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/media.css">
